--- a/style.css
+++ b/style.css
@@ -1,13 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
 body, html {
+	padding: 0;
+	margin:  0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+  }
+  
+  body {
+	background: rgba(241, 226, 215, 0.2);
+	background: #29363b;
+	position: relative;
+  }
+  
+  .logo {
+	position:     absolute;
+	left:         50%;
+	top:          50%;
+	height:       25px;
+	width:        120px;
+	z-index:      2;
+	margin-left: -60px;
+	margin-top:  -32px;
+	transform-origin: 50% 0;;
+  }
+  
+
+/* body, html {
     background-color: #1a1a1a;
     height: 100%;
     
-  }
+  } */
   @layer base{
     @font-face {
       font-family: "FashionVictim";
