--- a/style.css
+++ b/style.css
@@ -2,69 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
-
-body, html {
-    background-color: #1a1a1a;
-    height: 100%;
-    
-  }
-  @layer base{
-    @font-face {
-      font-family: "FashionVictim";
-      src: local("FashionVictim"),
-        url("FashionVictim.woff") format("woff") tech(color-COLRv1), url("FashionVictim.ttf")
-          format("TrueType"), url("FashionVictim.eot") format("opentype");
-    }
-
-    #animateCss{
-      font-family: "FashionVictim" ;
-     }
+body,
+html {
+  background-color: #1a1a1a;
+  height: 100%;
+}
+@layer base {
+  @font-face {
+    font-family: "FashionVictim";
+    src:
+      local("FashionVictim"),
+      url("FashionVictim.woff") format("woff") tech(color-COLRv1),
+      url("FashionVictim.ttf") format("TrueType"),
+      url("FashionVictim.eot") format("opentype");
   }
 
-  
-  
-
-  .wrapper {
-    width: 60%;
-    height: 100%;
-    margin: 100px auto;
+  #animateCss {
+    font-family: "FashionVictim";
   }
- #SVGRoot{
-cursor: pointer;
+}
 
- } 
- .bounce{
+.wrapper {
+  width: 60%;
+  height: 100%;
+  margin: 100px auto;
+}
+#SVGRoot {
+  cursor: pointer;
+}
+.bounce {
   width: 35%;
- }
- .arrow{
+}
+.arrow {
   width: 15%;
- }
- .DivClassName{
+}
+.DivClassName {
   width: 50%;
- }
- .title{
+}
+.title {
   width: 80%;
- }
- #svg_2{
+}
+#svg_2 {
   width: 100%;
- }
- .animateCss{
+}
+.animateCss {
   width: 40%;
-  font-family: 'FashionVictim';
- }
- .one{
-  width:3%
- }
- /* animateJs-6 */
+  font-family: "FashionVictim";
+}
+.one {
+  width: 3%;
+}
+/* animateJs-6 */
 
- .ml1 {
+.ml1 {
   font-weight: 900;
   font-size: 2.5em;
 }
 
 .ml1 .letter {
   display: inline-block;
-  
+
   line-height: 0.5em;
 }
 
@@ -86,71 +83,75 @@ cursor: pointer;
   transform-origin: 0 0;
 }
 
-.ml1 .line1 { top: 0; }
-.ml1 .line2 { bottom: 0; }
+.ml1 .line1 {
+  top: 0;
+}
+.ml1 .line2 {
+  bottom: 0;
+}
 div.prism-live {
-	position: relative;
-	box-sizing: border-box;
-	display: flex;
-	flex-flow: column;
+  position: relative;
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: column;
 }
 
 textarea.prism-live,
 pre.prism-live {
-	padding: .2rem .5rem;
-	box-sizing: border-box;
-	margin: 0;
+  padding: 0.2rem 0.5rem;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 textarea.prism-live {
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 1;
-	color: transparent;
-	/* color: hsla(0,0%,50%,.4); */
-	cursor: text;
-	white-space: pre;
-	border: 0;
-	outline: none;
-	background: transparent;
-	resize: none;
-	--selection-background: hsl(320, 80%, 25%);
-	--selection-color: hsla(0, 0%, 100%, .8);
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  color: transparent;
+  /* color: hsla(0,0%,50%,.4); */
+  cursor: text;
+  white-space: pre;
+  border: 0;
+  outline: none;
+  background: transparent;
+  resize: none;
+  --selection-background: hsl(320, 80%, 25%);
+  --selection-color: hsla(0, 0%, 100%, 0.8);
 }
 
 @supports (not (caret-color: black)) and (-webkit-text-fill-color: black) {
-	textarea.prism-live {
-		color: inherit;
-		-webkit-text-fill-color: transparent;
-	}
+  textarea.prism-live {
+    color: inherit;
+    -webkit-text-fill-color: transparent;
+  }
 }
 
-	/* Setting specific colors is needed
+/* Setting specific colors is needed
 	 * because otherwise Firefox shows blank text */
-	textarea.prism-live::-moz-selection {
-		background: var(--selection-background);
-		color: var(--selection-color);
-	}
+textarea.prism-live::-moz-selection {
+  background: var(--selection-background);
+  color: var(--selection-color);
+}
 
-	textarea.prism-live::selection {
-		background: var(--selection-background);
-		color: var(--selection-color);
-	}
+textarea.prism-live::selection {
+  background: var(--selection-background);
+  color: var(--selection-color);
+}
 
 pre.prism-live {
-	flex: 1;
-	position: relative;
-	pointer-events: none;
-	overflow: hidden;
-	max-height: 100%;
-	--scrollbar-width: 17px;
-	padding-bottom: var(--scrollbar-width);
-	padding-right: var(--scrollbar-width);
+  flex: 1;
+  position: relative;
+  pointer-events: none;
+  overflow: hidden;
+  max-height: 100%;
+  --scrollbar-width: 17px;
+  padding-bottom: var(--scrollbar-width);
+  padding-right: var(--scrollbar-width);
 }
 
-	pre.prism-live > code:empty::before {
-		content: " "
-	}
+pre.prism-live > code:empty::before {
+  content: " ";
+}
