create  gsap gallery 3rd

--- a/style.css
+++ b/style.css
@@ -190,3 +190,27 @@ pre[class*="language-"] {
 .token.entity {
   cursor: help;
 }
+.stage, .ring, .img {
+  width:100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  user-select:none;
+}
+
+ .stage {
+  overflow:hidden;
+  /* background:#000;   */
+}
+
+/* div, svg {
+  position: absolute;
+} */
+
+.container-gsap {
+  perspective: 2000px;
+  width: 300px;
+  height: 400px;  
+  left:50%;
+  top:50%;
+  transform:translate(-50%,-50%);
+}
