--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
 }
 @layer base {
   @font-face {
-    font-family:"FashionVictim";
+    font-family: "FashionVictim";
     src:
       local("FashionVictim"),
       url("FashionVictim.woff") format("woff") tech(color-COLRv1),
@@ -190,19 +190,21 @@ pre[class*="language-"] {
 .token.entity {
   cursor: help;
 }
-.stage, .ringGsap, .img {
-  width:100%;
+.stage,
+.ringGsap,
+.img {
+  width: 100%;
   height: 100%;
   transform-style: preserve-3d;
-  user-select:none;
+  user-select: none;
 }
 
- .stage {
-  overflow:hidden;
+.stage {
+  overflow: hidden;
   /* background:#000;   */
 }
 
-.stage  > div {
+.stage > div {
   position: absolute;
 }
 .stage > svg {
@@ -211,8 +213,8 @@ pre[class*="language-"] {
 .container-gsap {
   perspective: 2000px;
   width: 600px;
-  height: 400px;  
-  left:50%;
-  top:50%;
-  transform:translate(-50%,-50%);
+  height: 400px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
